fixed sidebar color on dark mode

--- a/public/theme.css
+++ b/public/theme.css
@@ -42,6 +42,7 @@
   --theme-text-light: var(--color-gray-600);
   --theme-text-lighter: var(--color-gray-400);
   --theme-bg: var(--color-white);
+  --theme-bg-hover: var(--color-gray-50);
   --theme-bg-offset: var(--color-gray-100);
   --theme-bg-accent: rgba(var(--theme-accent-rgb), var(--theme-accent-opacity));
   --theme-code-inline-bg: var(--color-gray-100);
@@ -62,6 +63,7 @@ body {
   --theme-text-light: var(--color-gray-400);
   --theme-text-lighter: var(--color-gray-600);
   --theme-bg: var(--color-black);
+  --theme-bg-hover: var(--color-gray-800);
   --theme-bg-offset: var(--color-gray-900);
   --theme-code-inline-bg: var(--color-gray-800);
   --theme-code-text: var(--color-gray-200);
